--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -25,6 +25,8 @@ benchmarks:
      fft.chpl               : our global 1D FFT entry
      probSize.chpl          : a common module for computing problem sizes
      fft-mta.chpl           : a port of the 2005 Konecny, Kahan, Feo entry
+     fft-testPow4.chpl      : an empty test used to exercise fft.chpl in our
+                              testing system for non-powers-of-two
 
 Most of the examples can be compiled in a standalone manner, for
 example, the canonical "Hello, world!" program can be compiled as
