Removed ? from identifiers in the language overview.  Added support for query expressions nested in formal argument types to Expressions section.  Rather than playing zone on my sections, I'm playing man-to-man on some changes that I think show up across multiple sections.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10158 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Expressions.tex
+++ b/spec/Expressions.tex
@@ -107,8 +107,9 @@ query-expression:
   ? identifier
 \end{syntax}
 Querying is restricted to querying the type of a formal argument, the
-element type of an formal argument that is an array, the domain of
-a formal argument that is an array, or the size of a primitive type.
+element type of an formal argument that is an array, the domain of a
+formal argument that is an array, the size of a primitive type, or a
+type or parameter field of a formal argument type.
 \begin{example}
 The following code defines a generic function where the type of the
 first parameter is queried and stored in the type alias \chpl{t} and
