--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@
 Release Changes List
 ====================
 
+*** BLC: STOPPED AT 05/18/07 11:01:37 -- deitz ***
+
 -----------
 version 0.5
 -----------
